[package]
name = "example-gd32vf103"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "*"
riscv-rt = "*"
panic-halt = "*"
embedded-hal = "*"
gd32vf103-pac = "*"

[dependencies.gd32vf103-hal]
version = "*"
path = "../gd32vf103-hal"

# this lets you use `cargo fix`!
[[bin]]
name = "example-gd32vf103"
test = false
bench = false
