[package]
name = "example-gd32vf103"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.6"
panic-halt = "0.2"
gd32vf103-hal = "0.0"

# this lets you use `cargo fix`!
[[bin]]
name = "example-gd32vf103"
test = false
bench = false
